# sycobench-600

./: .gitattributes  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_LICENSE  LICENSE  Makefile  NOTICE.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: models.yaml
data/: questions.json
docs/: ADOPTION.md  DATA_CARD.md  METRICS.md  REPRODUCIBILITY.md
integrations/huggingface/: README.md
integrations/inspect_evals/: README.md
integrations/lm_eval/: README.md  sycobench_600.yaml
paper/: README.md  acl.sty  references.bib  sycobench_camera_ready.tex
scripts/: audit_dataset.py  build_evaleval_submission.py  build_hf_dataset.py  inspect_api_smoke.py  run_eval.py  validate_and_build.py  validate_paper_full.py
sycobench/: __init__.py  inspect_task.py  io.py  metrics.py  openai_compat.py  parse.py  prompts.py  validate.py
tests/: test_dataset.py  test_evaleval_export.py  test_hf_export.py  test_inspect_task.py  test_lm_eval_adapter.py  test_metrics.py  test_parse.py  test_release_artifacts.py
